# nixos-config

./: .editorconfig  .envrc  .gitattributes  .gitignore  .sops.yaml  Justfile  README.adoc  REUSE.toml  flake.lock.license  flake.nix  shell.nix  treefmt.toml
.github/: dependabot.yml
.github/workflows/: build-devcontainers.yml  build.yml  check.yml  flakehub-push.yml  iso.yml  site.yml  update-firefox-addons.yml  update.yml
LICENSES/: LicenseRef-foodogsquared.txt  MIT.txt
apps/: README.adoc
apps/fds-fetcher-flock/: .gitignore  CHANGELOG.md  LICENSE  README.adoc  go.mod  go.sum.license  main.go
apps/nix-plugins-foodogsquared/: .gitignore  README.adoc  default.nix  meson.build  shell.nix
apps/nix-plugins-foodogsquared/nix/: default.nix  package.nix  shell.nix
apps/nix-plugins-foodogsquared/src/: lix-math.cc  meson.build  nix-math.cc
apps/run-workflow-with-vm/: README.adoc  app.sh  configuration.nix  default.nix  meson.build  meson_options.txt
configs/: README.adoc
configs/flake-parts/: bahaghari.nix  default.nix  dev.nix  disko.nix  flake-parts.nix  home-manager.nix  nixos.nix  nixvim.nix  packages.nix  templates.nix  wrapper-manager.nix
configs/nixos/: README.adoc
configs/nixvim/: README.adoc
core/: README.adoc  default.nix  flake.nix
devcontainers/: README.adoc  creatives.nix  default.nix  js-backend.nix  ruby-on-rails.nix  rust-backend.nix  typical-devenv.nix
docs/: default.nix
docs/manpages/: footer.5  home-manager-header.adoc  nixos-header.adoc  (+2 more)
lib/: README.adoc  data.nix  default.nix  env-builders.nix  flake.nix  formats.nix  math.nix  modules.nix  sources.nix  trivial.nix  xdg.nix
modules/: README.adoc
modules/wrapper-manager/wraparound/bubblewrap/launcher/: CHANGELOG.adoc  app.sh  meson.build  package.nix
overlays/: default.nix
pkgs/: README.adoc  clidle.nix  default.nix  freerct.nix  gnome-search-provider-recoll.nix  hush-shell.nix  moac.nix  mopidy-beets.nix  mopidy-funkwhale.nix  mopidy-internetarchive.nix  pop-launcher-plugin-duckduckgo-bangs.nix
shells/: README.adoc  cloud.nix  creatives.nix  default.nix  dotnet.nix  flatpak.nix  gnome.nix  gnu.nix  go.nix  gtk.nix  guile.nix  hugo.nix  latex.nix  lua.nix  nix.nix  nodejs.nix  rust.nix  tic-80.nix
templates/: README.adoc
templates/basic-nix-cpp-app/src/: main.cc  meson.build
terraform/: dns.tf  servers.tf  ssh-keys.tf  tailscale.tf  version.tf
tests/: README.adoc  default.nix  utils.nix
(+692 files in other folders)
